// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About component matches snapshot when in standalone mode 1`] = `
<div>
  <div
    class="MuiBox-root css-cfm5gl"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-10jnrrx-MuiTypography-root"
    >
      about.title
    </h4>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        class="MuiBox-root css-yd8sa2"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.madeBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.ursineSoftware
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.contactUs
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="mailto:contact@ursine.llc"
          >
            about.contactEmail
          </a>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.donate
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc/donate"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.donateUrl
          </a>
        </p>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            Share this app! Scan the QR code below.
          </h6>
          <img
            alt="QR code for sharing Minute Man"
            class="MuiBox-root css-1uipide"
            src="/assets/minman-v2-qr.png"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            about.diagnosticsTitle
          </h6>
          <table
            class="MuiTable-root css-1dwe2ef-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-13fv10z-MuiTableCell-root"
                >
                  about.diagnosticVersion
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  v
                  0.0.0-test
                   (
                  )
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticNetwork
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  about.diagnosticNetworkConnected
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticMode
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  about.diagnosticModeStandalone
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticPlatform
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`About component matches snapshot when not standalone 1`] = `
<div>
  <div
    class="MuiBox-root css-cfm5gl"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-10jnrrx-MuiTypography-root"
    >
      about.title
    </h4>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        class="MuiBox-root css-yd8sa2"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.madeBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.ursineSoftware
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.contactUs
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="mailto:contact@ursine.llc"
          >
            about.contactEmail
          </a>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.donate
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc/donate"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.donateUrl
          </a>
        </p>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            Share this app! Scan the QR code below.
          </h6>
          <img
            alt="QR code for sharing Minute Man"
            class="MuiBox-root css-1uipide"
            src="/assets/minman-v2-qr.png"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            about.diagnosticsTitle
          </h6>
          <table
            class="MuiTable-root css-1dwe2ef-MuiTable-root"
          >
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-13fv10z-MuiTableCell-root"
                >
                  about.diagnosticVersion
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  v
                  0.0.0-test
                   (
                  )
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticNetwork
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  about.diagnosticNetworkConnected
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticMode
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                >
                  about.diagnosticModeWeb
                </td>
              </tr>
              <tr
                class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                >
                  about.diagnosticPlatform
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
